---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type fowo : forward\ntype fowo : int\nvar _ : fowo"
---
"fowo"@"src/main.t:5..9" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of forward
"fowo"@"src/main.t:25..29" [Type]: alias[DefId(PackageId(3072), LocalDefId(1))] of int
"_"@"src/main.t:40..41" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(1))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
